# BioVisionLab

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: tests.yml
config/: dual_culture_mock.json  dual_culture_real_template.json  seeded_dual_culture_template.json
docs/: cli_reference.md  ml_ready_feature_plan.md  real_image_protocol.md  threshold_methods.md
scripts/: analyze_dual_culture_folder.py  create_qc_contact_sheet.py  generate_mock_dual_culture_dataset.py  run_demo.sh  validate_mock_demo.py
src/plate_analysis/: __init__.py  calibration.py  cli.py  config_validation.py  dataset_audit.py  dual_culture.py  experiment_plots.py  experiment_setup.py  manual_validation.py  mask_preview.py  metadata.py  pipeline.py  plotting.py  preview.py  qc.py  quality_control.py  reporting.py  seeded_pipeline.py  seeded_plots.py  seeded_segmentation.py  summary.py  synthetic_data.py  threshold_compare.py  validation.py  workflow.py
tests/: test_config_validation.py  test_dataset_audit.py  test_experiment_plots.py  test_experiment_setup.py  test_failed_images.py  test_manual_template.py  test_manual_validation.py  test_mask_cleanup.py  test_mask_preview.py  test_metadata.py  test_qc_review_images.py  test_quality_control.py  test_seeded_pipeline.py  test_seeded_plots.py  test_seeded_segmentation.py  test_summary.py  test_synthetic_data.py  test_threshold_methods.py  test_validation.py  test_workflow.py
