[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biovisionlab"
version = "0.1.0"
description = "Python toolkit for biological image analysis, starting with fungal dual-culture plate measurements."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Zahra Shahedi" }
]
dependencies = [
    "opencv-python",
    "numpy",
    "pandas",
    "matplotlib"
]

[project.scripts]
biovisionlab-analyze = "plate_analysis.cli:main_analyze"
biovisionlab-contact-sheet = "plate_analysis.cli:main_contact_sheet"
biovisionlab-validate-mock = "plate_analysis.cli:main_validate_mock"
biovisionlab-preview-config = "plate_analysis.cli:main_preview_config"
biovisionlab-summarize = "plate_analysis.cli:main_summarize"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
