[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biovisionlab"
version = "0.2.0"
description = "Python toolkit for biological image analysis, starting with fungal dual-culture plate measurements."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Zahra Shahedi" }
]
dependencies = [
    "opencv-python",
    "numpy",
    "pandas",
    "matplotlib"
]

[project.scripts]
biovisionlab-analyze = "plate_analysis.cli:main_analyze"
biovisionlab-contact-sheet = "plate_analysis.cli:main_contact_sheet"
biovisionlab-validate-mock = "plate_analysis.cli:main_validate_mock"
biovisionlab-preview-config = "plate_analysis.cli:main_preview_config"
biovisionlab-summarize = "plate_analysis.cli:main_summarize"
biovisionlab-qc-flags = "plate_analysis.cli:main_qc_flags"
biovisionlab-compare-manual = "plate_analysis.cli:main_compare_manual"
biovisionlab-manual-template = "plate_analysis.cli:main_manual_template"
biovisionlab-plot-experiment = "plate_analysis.cli:main_plot_experiment"
biovisionlab-run-workflow = "plate_analysis.cli:main_run_workflow"
biovisionlab-qc-review-images = "plate_analysis.cli:main_qc_review_images"
biovisionlab-audit-dataset = "plate_analysis.cli:main_audit_dataset"
biovisionlab-init-experiment = "plate_analysis.cli:main_init_experiment"
biovisionlab-generate-demo = "plate_analysis.cli:main_generate_demo"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
